[package]
name = "pv-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.3"
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.2"
tokio = "1.28.2"
